--- a/src/components/menu/Menu.scss
+++ b/src/components/menu/Menu.scss
@@ -1,6 +1,6 @@
 .menu-container {
   width: 215px;
-  height: 100vh;
+  height: calc(100% - 80px);
   padding: 40px 0;
   background-color: white;
 }
