--- a/src/containers/BaseLayout.scss
+++ b/src/containers/BaseLayout.scss
@@ -1,3 +1,25 @@
 html {
   background-color: #e5e5e5;
+  height: 100vh;
+
+  body {
+    height: 100%;
+  }
+
+  #root {
+    height: 100%;
+  }
+}
+
+.App {
+  height: 100%;
+}
+
+.base-layout {
+  height: 100%;
+}
+
+main {
+  display: flex;
+  height: calc(100% - 58px);
 }
