--- a/src/containers/MainContainer/MainContainer.scss
+++ b/src/containers/MainContainer/MainContainer.scss
@@ -16,7 +16,7 @@
 
   .info-container {
     height: 95%;
-    width: 300px;
+    min-width: 300px;
     background-color: white;
     margin-left: auto;
     border-radius: 2%;
