--- a/src/components/countryBanner/CountryBanner.scss
+++ b/src/components/countryBanner/CountryBanner.scss
@@ -1,3 +1,74 @@
+@keyframes bannerSlide {
+  from {
+    width: 0;
+  }
+  to {
+    width: 100%;
+  }
+}
+
 .country-banner {
   flex-grow: 1;
+  position: relative;
+  border-radius: 2%;
+  animation: bannerSlide;
+  animation-duration: 0.7s;
+}
+
+.country-flag {
+  width: 100%;
+  height: 100px;
+  position: absolute;
+  border-radius: 2%;
+}
+
+.country-pic {
+  width: 100%;
+  height: 100%;
+  border-radius: 2%;
+}
+
+.country-name {
+  position: absolute;
+}
+
+.even-banner-flag {
+  top: 10px;
+  z-index: 1;
+}
+
+.odd-banner-flag {
+  bottom: 10px;
+  z-index: 1;
+}
+
+.flip-banner {
+  width: 100%;
+  height: 100%;
+  background-color: gray;
+  position: absolute;
+  z-index: 0;
+  visibility: hidden;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+
+  h4 {
+    text-align: center;
+  }
+}
+
+@keyframes flipSlide {
+  from {
+    width: 0;
+  }
+  to {
+    width: 100%;
+  }
+}
+
+.visible {
+  visibility: visible;
+  animation: flipSlide;
+  animation-duration: 0.7s;
 }
