--- a/src/components/countryBanner/CountryBanner.scss
+++ b/src/components/countryBanner/CountryBanner.scss
@@ -1,31 +1,61 @@
-@keyframes bannerSlide {
-  from {
-    width: 0;
-  }
-  to {
-    width: 100%;
-  }
-}
-
 .country-banner {
   flex-grow: 1;
   position: relative;
-  border-radius: 2%;
-  animation: bannerSlide;
-  animation-duration: 0.7s;
+  cursor: pointer;
+}
+
+.flip-banner {
+  width: 0;
+  height: 100%;
+  position: absolute;
+  z-index: 0;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  transition: width 0.2s linear 0s;
+  overflow: hidden;
+  opacity: 85%;
+  color: white;
+  font: 700 20px/24px "Poppins";
+
+  h4 {
+    text-align: center;
+  }
+}
+
+.australia {
+  background-color: #012169;
+}
+
+.canada {
+  background-color: #d52b1e;
+}
+
+.ireland {
+  background-color: #008000;
+}
+
+.south-africa {
+  background-color: #ff7518;
+}
+
+.usa {
+  background-color: #0a3161;
+}
+
+.country-banner:hover > .flip-banner {
+  width: 100%;
 }
 
 .country-flag {
   width: 100%;
   height: 100px;
   position: absolute;
-  border-radius: 2%;
 }
 
 .country-pic {
   width: 100%;
   height: 100%;
-  border-radius: 2%;
 }
 
 .country-name {
@@ -40,35 +70,4 @@
 .odd-banner-flag {
   bottom: 10px;
   z-index: 1;
-}
-
-.flip-banner {
-  width: 100%;
-  height: 100%;
-  background-color: gray;
-  position: absolute;
-  z-index: 0;
-  visibility: hidden;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-
-  h4 {
-    text-align: center;
-  }
-}
-
-@keyframes flipSlide {
-  from {
-    width: 0;
-  }
-  to {
-    width: 100%;
-  }
-}
-
-.visible {
-  visibility: visible;
-  animation: flipSlide;
-  animation-duration: 0.7s;
 }
