feat: first coutnry details commit

--- a/src/containers/MainContainer/MainContainer.scss
+++ b/src/containers/MainContainer/MainContainer.scss
@@ -11,7 +11,7 @@
     background-color: white;
     flex-grow: 2;
     margin-left: 15px;
-    border-radius: 2%;
+    border-radius: 15px;
   }
 
   .info-container {
@@ -19,6 +19,6 @@
     min-width: 300px;
     background-color: white;
     margin-left: auto;
-    border-radius: 2%;
+    border-radius: 15px;
   }
 }
