--- a/src/containers/countries/CountriesContainer.scss
+++ b/src/containers/countries/CountriesContainer.scss
@@ -1,7 +1,7 @@
 .countries-container {
   height: 100%;
   width: 100%;
-  border-radius: 2%;
+  border-radius: 15px;
   display: flex;
   background-color: #e5e5e5;
 }
