--- a/src/components/countryBanner/CountryBanner.scss
+++ b/src/components/countryBanner/CountryBanner.scss
@@ -2,6 +2,8 @@
   flex-grow: 1;
   position: relative;
   cursor: pointer;
+
+  border-radius: 15px;
 }
 
 .flip-banner {
@@ -17,6 +19,7 @@
   opacity: 85%;
   color: white;
   font: 700 20px/24px "Poppins";
+  border-radius: 15px;
 
   h4 {
     text-align: center;
@@ -56,6 +59,7 @@
 .country-pic {
   width: 100%;
   height: 100%;
+  border-radius: 15px;
 }
 
 .country-name {
@@ -65,9 +69,11 @@
 .even-banner-flag {
   top: 10px;
   z-index: 1;
+  border-radius: 10px;
 }
 
 .odd-banner-flag {
   bottom: 10px;
   z-index: 1;
+  border-radius: 10px;
 }
