--- a/src/components/detailCard/DetailCard.scss
+++ b/src/components/detailCard/DetailCard.scss
@@ -2,4 +2,20 @@
   height: 300px;
   width: 300px;
   border-radius: 10px;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  color: white;
+  font: 600 24px/21px "Open Sans";
+
+  ul {
+    list-style-type: none;
+    list-style-position: outside;
+    padding: 0;
+  }
+
+  li {
+    margin: 40px;
+  }
 }
