--- a/src/containers/countries/CountryDetailsContainer.scss
+++ b/src/containers/countries/CountryDetailsContainer.scss
@@ -14,6 +14,17 @@
     margin: 30px 30px;
     cursor: pointer;
   }
+
+  .languages-div {
+    width: 80px;
+    display: flex;
+    justify-content: space-evenly;
+  }
+
+  img {
+    width: 30px;
+    height: 30px;
+  }
 }
 
 .country-summary {
@@ -35,9 +46,6 @@
   padding: 12px;
   display: flex;
   justify-content: space-between;
-}
-
-.country-cost {
 }
 
 .australia {
