--- a/src/containers/home/homeContainer.scss
+++ b/src/containers/home/homeContainer.scss
@@ -3,24 +3,49 @@
   display: flex;
   flex-direction: column;
   justify-content: space-between;
+  font: 700 20px/24px Poppins;
+  color: #5e208e;
 }
 
 .home-container-header {
+  border-radius: 15px 15px 0 0;
   height: 150px;
+
   h1 {
-    font: 700 20px/24px Poppins;
+    font-weight: 700;
+    font-size: 20px;
+  }
+
+  h2 {
+    font-size: 20px;
   }
 }
 
 .where-to {
-  display: flex;
+  display: grid;
+  grid-template-columns: 50% 50%;
+  align-items: center;
+  font-size: 20px;
 
+  h2 {
+    margin: 0;
+  }
   .where-to-title {
     padding-left: 200px;
+    position: relative;
+
+    h2 {
+      position: absolute;
+      right: 100px;
+    }
   }
 
   .features-grid {
     height: 300px;
+    display: grid;
+    gap: 20px;
+    grid-template-columns: repeat(2, 1fr);
+    font: 200 14px/24px Poppins;
   }
 }
 
@@ -29,6 +54,7 @@
   display: flex;
   font: 14px/17px "Open Sans";
   color: #020202d5;
+  border-top: solid 2px #ededed;
 
   .latest-features {
     width: 50%;
