--- a/src/components/list/List.scss
+++ b/src/components/list/List.scss
@@ -1,14 +1,16 @@
 a {
   text-decoration: none;
   color: white;
+  text-align: start;
 }
 
 .element-div {
   background-color: #5e208e;
+  padding-left: 10px;
   border-radius: 4px;
   height: 35px;
-  display: flex;
-  justify-content: space-around;
+  display: grid;
+  grid-template-columns: repeat(3, 1fr);
   margin: 4px;
   align-items: center;
 
