--- a/src/containers/countries/CountryDetailsContainer.scss
+++ b/src/containers/countries/CountryDetailsContainer.scss
@@ -16,7 +16,6 @@
   }
 
   .languages-div {
-    width: 80px;
     display: flex;
     justify-content: space-evenly;
   }
@@ -43,12 +42,12 @@
 }
 
 .quick-info {
-  padding: 12px;
   display: flex;
   justify-content: space-between;
   align-items: center;
-  background-color: rgb(233, 231, 127);
+  background-color: #888880cb;
   border-radius: 2px;
+  padding: 0 16px;
 }
 
 .weather-icon {
