feat: completed home

--- a/src/components/list/List.scss
+++ b/src/components/list/List.scss
@@ -5,7 +5,9 @@ a {
 }
 
 .element-div {
-  background-color: #5e208e;
+  border: solid 1px #9b8ea5;
+  color: #85798f;
+  background-color: #dedede;
   padding-left: 10px;
   border-radius: 4px;
   height: 35px;
