--- a/src/components/header/Header.scss
+++ b/src/components/header/Header.scss
@@ -18,6 +18,8 @@ header {
 .logo {
   filter: invert(14%) sepia(89%) saturate(7479%) hue-rotate(335deg)
     brightness(104%) contrast(103%);
+
+  height: 30px;
 }
 
 .logo-text {
