--- a/src/containers/home/homeContainer.scss
+++ b/src/containers/home/homeContainer.scss
@@ -10,6 +10,14 @@
   border-radius: 15px 15px 0 0;
   height: 150px;
 
+  img {
+    filter: invert(24%) sepia(94%) saturate(7394%) hue-rotate(332deg)
+      brightness(97%) contrast(108%);
+
+    width: 50px;
+    padding-right: 30px;
+  }
+
   h1 {
     font-weight: 700;
     font-size: 20px;
