--- a/src/containers/MainContainer/InfoContainer.scss
+++ b/src/containers/MainContainer/InfoContainer.scss
@@ -23,10 +23,9 @@
 }
 
 .content {
-  height: 500px;
   margin: 20px 10px 0 20px;
   display: grid;
-  grid-template-rows: 1fr 2fr;
+  grid-template-rows: 1fr 1fr;
   gap: 15px;
 }
 
@@ -43,6 +42,7 @@
 .challenges-div {
   border-radius: 8px;
   font-family: Poppins;
+  font-size: 15px;
 }
 
 .content-title {
