--- a/src/containers/project/ProjectContainer.scss
+++ b/src/containers/project/ProjectContainer.scss
@@ -4,8 +4,8 @@
 }
 
 .about-project {
-  height: 60%;
-  padding: 60px 42px 0;
+  height: 65%;
+  padding: 40px 42px 0;
   display: flex;
   gap: 20px;
 
@@ -14,7 +14,7 @@
   }
 
   p {
-    font-size: 15px;
+    font-size: 14px;
   }
 }
 
@@ -30,7 +30,7 @@
     gap: 30px;
 
     .photo {
-      width: 140px;
+      width: 120px;
       border-radius: 50%;
     }
 
@@ -58,6 +58,10 @@
     p {
       margin: 0;
     }
+  }
+
+  .class-2 {
+    font-weight: bold;
   }
 
   .about-me-social {
